<resources>
    <string name="app_name">냉장고 털EGG</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_user">회원 로그인 하기</string>
    <string name="prompt_id">ID</string>
    <string name="prompt_password">Password</string>
    <string name="login">로그인</string>
    <string name="sign_up">회원가입</string>
    <string name="create_post">게시글 작성하기</string>
    <string name="back">뒤로가기</string>
    <string name="post">작성하기</string>
    <string name="enter_title">제목을 입력해주세요.</string>
    <string name="enter_details">내용을 입력해주세요.</string>

    <string name="like_button">좋아요 버튼</string>

</resources>