<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/PostLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:baselineAligned="false"
        android:minHeight="?attr/actionBarSize"
        android:orientation="horizontal"
        android:theme="?attr/actionBarTheme">

        <ImageButton
            android:id="@+id/imb_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/back"
            app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

        <View
            android:layout_width="234dp"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/b_post"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/lightYellow"
            android:text="@string/post"
            android:textColor="@color/black" />

    </LinearLayout>

    <EditText
        android:id="@+id/Edit_Title"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:ems="10"
        android:hint="@string/enter_title"
        android:inputType="text" />

    <EditText
        android:id="@+id/Edit_Contents"
        android:layout_width="match_parent"
        android:layout_height="591dp"
        android:ems="10"
        android:gravity="top|start"
        android:hint="@string/enter_details"
        android:inputType="textMultiLine" />

</LinearLayout>